Refactor slot configs